Send Accept Email

--- a/IUstaApi/appsettings.json
+++ b/IUstaApi/appsettings.json
@@ -1,6 +1,12 @@
 {
   "AllowedHosts": "*",
-  
+  "SMTP": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "elisamilzade@gmail.com",
+    "Password": "ojgnpvdxrvzeljup",
+    "EnableSsl": true
+  },
   "AdminRole": {
     "Email": "elisamilzade@gmail.com",
     "Password": "Ali!samilzade_2005"
