--- a/IUstaApi/appsettings.json
+++ b/IUstaApi/appsettings.json
@@ -3,8 +3,8 @@
   "SMTP": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "elisamilzade@gmail.com",
-    "Password": "ojgnpvdxrvzeljup",
+    "Username": "notifybyshamil@gmail.com",
+    "Password": "boyejdnazoptyanl",
     "EnableSsl": true
   },
   "AdminRole": {
